// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDeliveryDates отдает заданное количество кварталов с корректными данными 1`] = `
Array [
  Object {
    "quarter": 4,
    "year": 2025,
  },
  Object {
    "quarter": 1,
    "year": 2026,
  },
  Object {
    "quarter": 2,
    "year": 2026,
  },
  Object {
    "quarter": 3,
    "year": 2026,
  },
  Object {
    "quarter": 4,
    "year": 2026,
  },
]
`;

exports[`getDeliveryDates по дефолту отдает 8 кварталов 1`] = `
Array [
  Object {
    "quarter": 1,
    "year": 2021,
  },
  Object {
    "quarter": 2,
    "year": 2021,
  },
  Object {
    "quarter": 3,
    "year": 2021,
  },
  Object {
    "quarter": 4,
    "year": 2021,
  },
  Object {
    "quarter": 1,
    "year": 2022,
  },
  Object {
    "quarter": 2,
    "year": 2022,
  },
  Object {
    "quarter": 3,
    "year": 2022,
  },
  Object {
    "quarter": 4,
    "year": 2022,
  },
]
`;
